--- a/scrapbox/static/css/detailsbyid.css
+++ b/scrapbox/static/css/detailsbyid.css
@@ -1,2 +1,14 @@
 
- 
+.cards-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .card {
+    width: 300px;
+    height: 200px;
+    border: 1px solid black;
+    padding: 10px;
+  }
+  
