--- a/scrapbox/static/css/style.css
+++ b/scrapbox/static/css/style.css
@@ -1,4 +1,4 @@
-.body{
+/* .body{
     background-color: #FFDEE9;
     background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
     
@@ -8,12 +8,91 @@
     background-repeat: no-repeat;
     background-size: cover;
     
- }
-.grid-container{
+ } */
+/* .grid-container{
     height: 60%;
 }
 .master-container{
     background-color: #FFDEE9;
     background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
 
+} */
+body{
+    background-image: url("../images/bg.jpg");
+    min-height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+ }
+
+.grid-container{
+    height: 60%;
 }
+/* .master-container{
+    background-color: #FFDEE9;
+    background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+
+} */
+
+
+ .main{
+     height: 600px;
+ }
+ 
+ .icon{
+     position: absolute;
+     padding: 9px;
+    border: 1px solid black;
+    /* background-color: rgb(210, 206, 206); */
+    width: 35PX;
+ 
+ }
+ 
+ .input {
+     width: 90%;
+    
+     text-align: center;
+ }
+          
+ *{
+     margin: 0;
+ }
+ /* body img{
+     width: 100%;
+     height: 100%;
+ } */
+ .row{
+     position: absolute;
+     top: 15%;    
+ }
+ .card{
+     width: 60%;
+     height: 93%;
+ }
+
+ /* .btn-grad {
+     background-image: linear-gradient(to right, #301683 0%, #21c4d9  51%, #2e2a30  100%);
+     margin: 10px;
+     padding: 15px 45px;
+     text-align: center;
+     text-transform: uppercase;
+     transition: 0.5s;
+     background-size: 200% auto;
+     color: white;            
+     box-shadow: 0 0 20px #eee;
+     border-radius: 10px;
+     display: block;
+   }
+  */
+ .btn-grad:hover {
+     background-position: right center; 
+     color: #fff;
+     text-decoration: none;
+   }
+ .link{
+     text-decoration: none;
+   }
+ .link:hover{
+      text-decoration: underline;
+ }
