--- a/scrapbox/templates/index.html
+++ b/scrapbox/templates/index.html
@@ -6,120 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="{%static 'css/indexstyle.css' %}">
+    <link rel="stylesheet" href="{%static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar bg-dark  border-body text-light" data-bs-theme="dark">
+  <!-- <nav class="navbar bg-dark  border-body text-light" data-bs-theme="dark">
   
-    <p><h1>Driven Innovations</h1></p>
+    <p><h1>Scrap Box</h1></p>
   
   
-</nav>
-<nav class="navbar bg-success p-2 text-dark bg-opacity-25 border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+</nav> -->
+<nav class="navbar bg-info p-2 text-dark bg-opacity-75 border-bottom border-body text-dark text-start  " data-bs-theme="dark">
 
         <div class="col-l-8 d-flex justify-content-center">
-                  <h4 class="ms-3">  <i class="fa-solid fa-user"></i> {{request.user}}</h4>
+                  <h4 class="ms-3"> <i class="fa-solid fa-user"></i> Welcome {{request.user}}</h4>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
-          <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 Buy
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <div class=" mt-3 ">
-                    <a href="{%url 'list-all' %}"><button class="ms-auto btn btn-info border-dark bg-secondary text-light" >Available Items</button></a> 
-                  </div>
-                </li>
-                  
-              </ul>
-          </div>
+          
 
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Sell
-            </button>
-            <ul class="dropdown-menu">
-
-              <li>
-                <div class="mt-3 "><a href="{%url 'scrap-create'%}" ><button class="ms-auto btn btn-info border-dark bg-secondary text-light" >Create New Item</button></a> </div>
-       
-            </ul>
-          </div>
+          
 
           <div class="col-l-6">
              <!-- <div>
-                   <a href="{%url 'profiledetail_view' request.user.profile.id  %}"><button class="btn btn-secondary"><i class="fa-solid fa-user"></i></button></a>
-                   <a href="{%url 'cart-view'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
+                   <a href="#"><button class="btn btn-secondary"><i class="fa-solid fa-user"></i></button></a>
+                   <a href="#" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
 
               </div> -->
 
               <div class="col-l-6">
-                <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
+                <a href="{%url 'signout'%}" class="ms-auto btn btn-danger  text-light"  >Logout </a> 
 
               </div>
 
         </div>   
 </nav> 
 
-<div class="container  justify-content-center">
-  <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="{%static 'images/login3.jpg'%}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="{%static 'images/login4.jpg'%}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="{%static 'images/login5.jpg'%}" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-</div>
+<div class="container  justify-content-center mt-5">
+  <h2 class="text text-danger"><strong>Hello {{request.user}} <br>
+  What you want to do</strong></h2>
+        <div class="options">
+          <button class="btn" type="button" aria-expanded="false">
+            <a href="{%url 'list-all' %}"><button class="ms-auto btn btn-info border-dark bg-success text-light" >Buy</button></a> 
 
+          </button>
+          <button class="btn " type="button"  aria-expanded="false">
+            <div class="mt-3 "><a href="{%url 'scrap-create'%}" ><button class="ms-auto btn btn-info border-dark bg-info text-light" >Sell an Item</button></a> </div>
+
+          </button>
 <div class="container d-flex justify-content-center mt-5 mb-5">
 
   <div class="card" style="width: 25rem;"> 
     <div class="card-body">
       <h5 class="card-title">About us</h5>
       <p class="card-text">
-        Since foraying into Kerala’s pre-owned car market in 2011, Driven Innovations channel for pre-owned cars, has grown in both size and stature. With 17 outlets spread across 14 cities, the new Driven Innovations Value caters to the diverse and burgeoning needs of pre-owned car buyers across the country.
-      </p>
+        Welcome to Boho Chic, the online destination for bohemian fashion lovers. We offer a wide range of clothing and accessories that are comfortable, colorful, and expressive. Whether you are looking for a flowy maxi dress, a cozy sweater, or a statement necklace, you will find something that suits your style and personality. All our products are made from high-quality fabrics and materials that are ethically sourced and environmentally friendly. We also support local artisans and communities around the world by donating a portion of our profits to various causes. At Boho Chic, we believe that fashion is more than just clothes. It is a way of life, a way of expressing yourself, and a way of making a difference. Browse our collection and discover the bohemian spirit in you      </p>
     </div>
   </div>
   <div class="card ms-5" style="width: 35rem;">
     <div class="card-body">
       <h5 class="card-title">Contat us</h5>
-      <p class="card-text">Address(Main branch): 1st Floor, Ansari Complex, West temple street, Sreenagar Colony, Karappuzha, Kottayam, Kerala 686016</p>
+      <p class="card-text">Kakkanad <br>
+        Noel Focus, Seaport Airport Road, Chitethukkara <br>
+        Kakkanad <br>
+        Ernakulam - 682037  <br>
+        +918086170222 <br>
+        Open until 09:30 PM </p>
       <style>
             
         ul.no-bullets {
@@ -131,9 +85,9 @@
 
       </style>
       <ul class="no-bullets">
-        <li><i class="fa-solid fa-envelope ms-2 p-2"></i>driveninnovations@hotmail.com</li>
-        <li><i class="fa-solid fa-phone ms-2 p-2"></i>0481-2340117, +919495451658</li>
-        <li><i class="fa-solid fa-location-dot ms-2 p-2"></i><a href="">https://www.google.com/maps/search/?api=1&query=centurylink+field</a></li>
+        <li><i class="fa-solid fa-envelope ms-2 p-2"></i>help.in@maxfashion.com</li>
+        <li><i class="fa-solid fa-phone ms-2 p-2"></i>1800-123-1444(toll-free), +918086170222</li>
+        <li><i class="fa-solid fa-location-dot ms-2 p-2"></i><a href="https://maps.app.goo.gl/8UXGc28YEJiShre16">View in Map</li> <br>
 
         
       </ul>
@@ -142,8 +96,8 @@
 
 </div>
 <div class="card-footer text-body-secondary bg-success p-2 text-dark bg-opacity-25 mb-2 p-2 col-12 text-center">
-  <i class="fa-brands fa-facebook"></i>
-  <i class="fa-brands fa-instagram"></i>
+  <a href="www.facebook.com">  <i class="fa-brands fa-facebook"></i></a>
+  <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
   <i class="fa-brands fa-youtube"></i>
 
 </div>
