--- a/scrapbox/templates/login.html
+++ b/scrapbox/templates/login.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 {%load static%}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="icon"  href="{%static 'images/logo.jpg'%}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{%static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{%static 'css/style.css'%}">
+    <title>
+        Scrap Box
+    </title>
 </head>
-<body class="body">
-    {%if messages%}
-    {%for m in messages%}
-        {%if m.level == DEFAULT_MESSAGE_LEVELS.SUCCESS%}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <strong>{{m}}</strong>
-            
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<body class="vh-100" style="background-image: url(../static/images/bg.jpg); width: 90%; height: auto;">
+  
+  <div class="row" style="margin-left: 10%;">
+    <div class="col-lg-7 col-md-5 d-flex justify-content-center mt-3 p-6">
+      <img src="{%static 'images/side.png'%}" alt="" style="height: 600px; width: 90%">
+    </div>
+    <div class="col-lg-5 col-md-7 d-flex justify-content-center mt-5">
+      <div class="card p-3" style="width: 70%; margin-left: 30%;">
+        <div class="card-body">
+          <h1 class="card-title fw-bold text-center">Welcome Back!</h1>
+          <div class="d-flex justify-content-center mt-3">
+            <img src="{%static 'images/logopic.png'%}" alt="" style="height: 100px;width: 180px;">
           </div>
-        {%endif%}
-
-        {%if m.level == DEFAULT_MESSAGE_LEVELS.ERROR%}
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <strong>{{m}}</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-          </div>
-        
-        {%endif%}
-    {%endfor%}
-    {%endif%}
-    <nav class="navbar bg-dark border-bottom border-body text-light" data-bs-theme="dark">
-        <p><h1>Driven Innovations</h1></p>
-        <p>Welcome to Driven Innovations. Please login/signup to proceed</p>
-    </nav>
-    
-
-    <div class="container d-flex justify-content-center text-center">
-        
-        <div class="row mt-2">
-          <div class="col-lg-6 mt-5">
-                <img src="{%static 'images/driven.png'%}" alt="" style="width: 60%; height: auto;">
-          </div>
-          <div class="col-lg-6 mt-3 p-5">
-            <form action=""method="post">
-                <h3>Login Here </h3>
-                <div class="mt-3">
-                    {%csrf_token%}
-                    {{form.as_p}}
-                </div>
-                <button class="btn btn-primary ">Login</button>
-                <div class="mt-2">Create a new account? <a class="link" href="{%url 'register' %}">Sign-Up</a></div>
-        </form>
-          </div>
+          <!-- =========== form starts =========== -->
+          {%if form.error%}
+          {{form.errors}}
+          {%endif%}
+          <form action="" method="post">
+            {%csrf_token%}
+            <div class="input-group mt-4">
+              <span class="input-group-text" id="basic-addon1">
+                <i class="fa-solid fa-user" style="color: #19a1d7;"></i>
+              </span>
+              <input type="text" name="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group mt-4">
+              <span class="input-group-text" id="basic-addon1">
+                <i class="fa-solid fa-lock" style="color: #19a1d7;"></i>
+              </span>
+              <input type="password" name="password" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn btn-outline-primary rounded-pill mt-4">Login</button>
+            </div>
+          </form>
+          <!-- =========== form ends =========== -->
+            <hr>
+            <div class="text-center mb-3">
+              Create a new account? <a class="link" href="{%url 'register'%}">Sign-Up</a>
+            </div>
         </div>
-
-
+      </div>
+    </div>
+  </div>
 </body>
 </html>
