--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body class="body"style="background-color:#D5F5E3 ">
-  <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+  <!-- <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
     <div class="col-l-8  text-light  justify-content-center">
         <h4>  WELCOME..... {{request.user}}</h4>
      </div>
@@ -21,32 +21,67 @@
             <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
 
       </div>   
-  </nav> 
+  </nav>  -->
+  <nav class="navbar bg-info p-2 text-dark bg-opacity-75 border-bottom border-body text-dark text-start  " data-bs-theme="dark">
 
-    <div class="container d-flex justify-content-center mt-5">
+    <div class="col-l-8 d-flex justify-content-center">
+              <h4 class="ms-3"> <i class="fa-solid fa-cart-shopping"></i> {{data.name}}</h4>
+    </div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
-        <div class="card" style="width: 25rem; height: auto;">
-          {%if data.picture%}
-              <img src="{{data.picture.url}}">
-          {%endif%}
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
-            
-              <h5 class="title card-title ms-2">{{data.name}}</h5>
-              
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">{{data.price}}</li>
-              <li class="list-group-item">{{data.category}}</li>
-              <li class="list-group-item">{{data.location}}</li>
-              <li class="list-group-item">{{data.phone_no}}</li>
-              <li class="list-group-item">{{data.description}}</li>
-              
-            </ul>
-            <div class="card-body">
-              <a href="{%url 'scrap-update' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>
+      
 
-              <a href="{%url 'addto-cart' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
-            
+      
+
+      <div class="col-l-6">
+         <!-- <div>
+               <a href="#"><button class="btn btn-secondary"><i class="fa-solid fa-user"></i></button></a>
+               <a href="#" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
+
+          </div> -->
+
+          <div class="col-l-6">
+            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-success text-light">Home Page</a>
+
+            <a href="{%url 'signout'%}" class="ms-auto btn btn-danger  text-light"  >Logout </a> 
+
           </div>
+
+    </div>   
+</nav> 
+
+    <div class="container">
+        <div class="card-container">
+            <div class="card" style="width: 300px; height: auto;">
+              {%if data.picture%}
+                  <img src="{{data.picture.url}}">
+              {%endif%}
+            </div>
+
+
+            <div class="card">
+                <!-- <img src="..." class="card-img-top" alt="..."> -->
+
+                  <h5 class="title card-title ms-2">{{data.name}}</h5>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">Price : Rs.{{data.price}}</li>
+                  <li class="list-group-item">Category : {{data.category}}</li>
+                  <li class="list-group-item">Place : {{data.location}}</li>
+                  <li class="list-group-item">Contact no. : {{data.phone_no}}</li>
+                  <li class="list-group-item">{{data.description}}</li>
+                
+                </ul>
+                <div class="card-body">
+                  <a href="{%url 'scrap-update' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>
+
+                  <a href="{%url 'addto-cart' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
+                </div>
+                 
+
+                  
+            </div>
+        </div>
         
         
     </div>
