--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #D5F5E3 ">
-<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="white">
         <div class="col-l-8  text-light  justify-content-center">
             <h4 class="ms-3">  <i class="fa-solid fa-user"></i> {{request.user}}</h4>
         </div>
